--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,8 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="/aliyun-upload-sdk/lib/es6-promise.min.js"></script>
+    <script src="/aliyun-upload-sdk/lib/aliyun-oss-sdk-6.13.0.min.js"></script>
+    <script src="/aliyun-upload-sdk/aliyun-upload-sdk-1.5.2.min.js"></script>
   </body>
 </html>
